[project]
name = "manual-promotion"
version = "0.1.0"
description = "Сервис ручного продвижения объявлений Avito"
authors = [
    { name = "Ilmir Nigmatullin", email = "nigmatullin.mir@gmail.com" }
]
maintainers = [
    { name = "Ilmir Nigmatullin", email = "nigmatullin.mir@gmail.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12,<3.15"
keywords = ["avito", "manual-promotion", "dispatcher", "cpxpromo", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "uvloop (>=0.22.1,<0.23.0)",
    "aiohttp (>=3.13.0,<4.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "orjson (>=3.11.6,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "cachetools (>=5.5.0,<6.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.9.0,<1.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
]


# ─────────────────────────────────────────────────────────────────────────────
# Black
# ─────────────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 79
target-version = ["py312"]


# ─────────────────────────────────────────────────────────────────────────────
# Ruff
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["docs", "logs"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]


# ─────────────────────────────────────────────────────────────────────────────
# MyPy
# ─────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
exclude = ["docs/", "logs/"]
